# ProjectTemplates

./: templates.json
telegram-bot/python-aiogram-empty/: .env.sample  __main__.py  pyproject.toml
telegram-bot/python-aiogram-empty/config/: Config.py
telegram-bot/python-aiogram-empty/database/: SQLIte3Connector.py
telegram-bot/python-aiogram-empty/fsm/: FSM.py
telegram-bot/python-aiogram-empty/handler/: Commands.py  KeyboardCallback.py  Messages.py
telegram-bot/python-aiogram-empty/keyboard/: KeyboardBuilder.py
web/flask-dashboard-adminkit/: pyproject.toml
web/flask-dashboard-adminkit/app/: __init__.py  config.py
web/flask-dashboard-adminkit/app/routes/: main.py
web/flask-dashboard-adminkit/app/static/assets/js/: app.js
web/flask-dashboard-adminkit/app/templates/: index.html  lolofest_applications.html
web/flask-dashboard-adminkit/app/templates/base/: base.html  dash_base.html
web/flask-dashboard-adminkit/app/templates/components/: _footer.html  _header.html  _menu.html
web/flask-empty/app/: __init__.py  config.py
